fixed with issue on mobile

--- a/devpato/src/app/intro/intro.component.scss
+++ b/devpato/src/app/intro/intro.component.scss
@@ -1,4 +1,4 @@
-.intro {
+.intro-page {
   height: 100vh;
   .wrapper {
     height: 100%;
@@ -62,3 +62,5 @@
     transform: translatey(0px);
   }
 }
+
+/*Media Queries*/
